Changed sso url

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#ffffff" />
     <title>Water Allocation - Province of British Columbia</title>
 
-    <script src="https://sso-test.pathfinder.gov.bc.ca/auth/js/keycloak.js"></script>
+    <script src="https://test.oidc.gov.bc.ca/auth/js/keycloak.js"></script>
   </head>
   <body>
     <noscript>
